adding chart,  table & sidebar

--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/moment-jalaali": "^0.7.9",
+    "chart.js": "^4.4.4",
+    "moment-jalaali": "^0.10.1",
+    "next": "14.2.7",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
+    "react-datepicker2": "^3.3.13",
     "react-dom": "^18",
-    "next": "14.2.7"
+    "react-modern-calendar-datepicker": "^3.1.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.7"
+    "eslint-config-next": "14.2.7",
+    "typescript": "^5"
   }
 }
